--- a/src/main/resources/static/src/scss/components/_navbar.sass
+++ b/src/main/resources/static/src/scss/components/_navbar.sass
@@ -10,7 +10,7 @@ $parent-selector: '.pf__navbar'
         overflow-y: auto
         padding: 4rem 0
 
-        background-image: linear-gradient($color-purple, $color-green)
+        background-image: linear-gradient(#545935, #19a936)
 
     &-brand
         &
