--- a/src/main/resources/static/src/css/style.css
+++ b/src/main/resources/static/src/css/style.css
@@ -49,7 +49,7 @@ body {
   height: 100%;
   overflow-y: auto;
   padding: 4rem 0;
-  background-image: linear-gradient(#7B1FA2, #0277BD);
+  background-image: linear-gradient(#545935, #19a936);
 }
 .pf__navbar-brand {
   text-align: center;
