--- a/src/main/resources/templates/components/sidenav.html
+++ b/src/main/resources/templates/components/sidenav.html
@@ -5,7 +5,8 @@
         <h3 class="pf__navbar-subtitle"> Stock </h3>
         <ul class="pf__navbar-list">
             <div th:replace="~{:: link(${active}, '/stock/page', 'Mouvement de Stock')}"></div>
-            <div th:replace="~{:: link(${active}, '/stock-balance/page', 'Bilan de Stock')}"></div>
+            <div th:replace="~{:: link(${active}, '/stock/chart/page', 'Évolution de Stock')}"></div>
+            <div th:replace="~{:: link(${active}, '/stock/balance/page', 'Bilan de Stock')}"></div>
         </ul>
     </div>
 
