--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -9,15 +9,20 @@
     <link rel="stylesheet" type="text/css" href="/lib/fa/css/all.min.css" />
     
     <link rel="stylesheet" type="text/css" href="/lib/mdb5/css/mdb.min.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/toolkit/css/chart.toolkit.css" />
     
     <link rel="stylesheet" type="text/css" href="/src/css/style.css">
 
     <script defer type="text/javascript" src="/lib/mdb5/js/mdb.umd.min.js"></script>
     
+    <script defer type="text/javascript" src="/lib/toolkit/js/chart.umd.js"></script>
+    <script defer type="text/javascript" src="/lib/toolkit/js/chart.toolkit.js"></script>
+
     <script defer type="text/javascript" src="/lib/toolkit/js/dom.toolkit.js"></script>
     <script defer type="text/javascript" src="/lib/toolkit/js/CRUDPage.js"></script>
     <script defer type="text/javascript" src="/lib/toolkit/js/Pagination.js"></script>
     
+    <script defer type="text/javascript" src="/src/js/components.js"></script>
     <script defer type="text/javascript" src="/src/js/index.js"></script>
     <!-- <script type="text/javascript" src="/src/js/script.js"></script> -->
 </head>
