--- a/src/main/resources/templates/pages/stock/balance.html
+++ b/src/main/resources/templates/pages/stock/balance.html
@@ -1,6 +1,6 @@
 <div th:fragment="content" class="container mt-5">
     <h1 class="d-flex gap-1 align-items-center mb-3">
-        <button id="btn-pdf" type="button" class="btn btn-secondary text-danger" data-mdb-tooltip-init title="Exporter PDF" data-mdb-ripple-init data-mdb-modal-init>
+        <button id="btn-pdf" type="button" class="btn btn-secondary text-danger" data-mdb-tooltip-init title="Exporter PDF" data-mdb-ripple-init>
             <i class="fa fa-file-pdf"></i>
         </button>
         <button type="button" class="btn btn-secondary text-success" data-mdb-tooltip-init title="Filtrer" data-mdb-ripple-init data-mdb-modal-init data-mdb-target="#modal">
