--- a/src/main/resources/templates/components/form.html
+++ b/src/main/resources/templates/components/form.html
@@ -13,12 +13,15 @@
     </div>
 </div>
 
-
 <!-- input component -->
 <div th:fragment="input(name, value, type, label)">
     <div class="mb-4">
         <label th:for="${name}" th:text="${label}"></label>
-        <input th:type="${type}" class="form-control" th:value="${value}" th:id="${name}" th:name="${name}" />
+        <input th:type="${type}" 
+               class="form-control" 
+               th:value="${value}" 
+               th:id="${name}" 
+               th:name="${name}" />
         <div class="invalid-feedback"></div>
     </div>
 </div>
