--- a/src/main/resources/templates/pages/product-category/index.html
+++ b/src/main/resources/templates/pages/product-category/index.html
@@ -31,5 +31,5 @@
     </table>
  
     <div th:replace="~{/components/pagination :: pagination}"></div>
-    <script defer type="text/javascript" src="/src/js/product-category/index.js"></script>
+    <script defer type="text/javascript" th:src="${js_pages + '/product-category/index.js'}"></script>
 </div>
