--- a/src/main/resources/templates/pages/product-subcategory/index.html
+++ b/src/main/resources/templates/pages/product-subcategory/index.html
@@ -33,5 +33,5 @@
     </table>
 
     <div th:replace="~{/components/pagination :: pagination}"></div>
-    <script defer type="text/javascript" src="/src/js/product-subcategory/index.js"></script>
+    <script defer type="text/javascript" th:src="${js_pages + '/product-subcategory/index.js'}"></script>
 </div>
