--- a/src/main/resources/templates/pages/product/index.html
+++ b/src/main/resources/templates/pages/product/index.html
@@ -12,7 +12,7 @@
                 <h1 th:text="${formTitle}"></h1>
                 <div th:replace="~{/components/form :: input('label', ${product.label}, 'text', 'Libellé')}"></div>
                 <div th:replace="~{/components/form :: select('idProductSubcategory', ${product.idProductSubcategory}, ${subcategories}, 'Sous-catégorie')}"></div>
-                <div th:replace="~{/components/form :: input('thresholdWarning', ${product.thresholdWarning}, 'number', 'Seuil de Quantité Minimum')}"></div>
+                <div th:replace="~{/components/form2 :: input('thresholdWarning', ${product.thresholdWarning}, 'number', 'Seuil de Quantité Minimum', '0.001')}"></div>
             
                 <button class="btn btn-success"> Valider </button>
             </form>
@@ -37,5 +37,5 @@
     </table>
 
     <div th:replace="~{/components/pagination :: pagination}"></div>
-    <script defer type="text/javascript" src="/src/js/product/index.js"></script>
+    <script defer type="text/javascript" th:src="${js_pages + '/product/index.js'}"></script>
 </div>
