dashboard and additional features for chart

--- a/src/main/resources/templates/components/sidenav.html
+++ b/src/main/resources/templates/components/sidenav.html
@@ -2,20 +2,33 @@
     <div class="pf__navbar-brand"> <h1> <a href="/"> LOGO </a></h1> </div>
     
     <div class="pf__navbar-section">
+        <ul class="pf__navbar-list">
+            <div th:replace="~{:: link(${active}, '/', 'Tableau de Bord')}"></div>
+        </ul>
+    </div>
+    
+    <div class="pf__navbar-section">
         <h3 class="pf__navbar-subtitle"> Stock </h3>
         <ul class="pf__navbar-list">
-            <div th:replace="~{:: link(${active}, '/stock/page', 'Mouvement de Stock')}"></div>
-            <div th:replace="~{:: link(${active}, '/stock/chart/page', 'Évolution de Stock')}"></div>
-            <div th:replace="~{:: link(${active}, '/stock/balance/page', 'Bilan de Stock')}"></div>
+            <div th:replace="~{:: link(${active}, '/stock/mvt-product-stock/page', 'Mouvement de Stock')}"></div>
+            <!-- <div th:replace="~{:: link(${active}, '/stock/mvt-product-stock/chart/page', 'Évolution de Stock')}"></div>
+            <div th:replace="~{:: link(${active}, '/stock/mvt-product-stock/balance/page', 'Bilan de Stock')}"></div> -->
         </ul>
     </div>
 
     <div class="pf__navbar-section">
         <h3 class="pf__navbar-subtitle"> Produit </h3>
         <ul class="pf__navbar-list">
-            <div th:replace="~{:: link(${active}, '/product/page', 'Produit')}"></div>
-            <div th:replace="~{:: link(${active}, '/product-category/page', 'Catégorie Produit')}"></div>
-            <div th:replace="~{:: link(${active}, '/product-subcategory/page', 'Sous-catégorie Produit')}"></div>
+            <div th:replace="~{:: link(${active}, '/product/product/page', 'Produit')}"></div>
+            <div th:replace="~{:: link(${active}, '/product/product-category/page', 'Catégorie Produit')}"></div>
+            <div th:replace="~{:: link(${active}, '/product/product-subcategory/page', 'Sous-catégorie Produit')}"></div>
+        </ul>
+    </div>
+
+    <div class="pf__navbar-section">
+        <h3 class="pf__navbar-subtitle"> Vente </h3>
+        <ul class="pf__navbar-list">
+            <div th:replace="~{:: link(${active}, '/sale/customer/page', 'Client')}"></div>
         </ul>
     </div>
 
