--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -23,6 +23,7 @@
     <script defer type="text/javascript" src="/src/js/view/base/SimplePage.js"></script>
     <script defer type="text/javascript" src="/lib/toolkit/js/Pagination.js"></script>
     
+    <script defer type="text/javascript" src="/src/js/view/components/SelectWithFilter.js"></script>
     <script defer type="text/javascript" src="/src/js/view/components/buttons.js"></script>
     <script defer type="text/javascript" src="/src/js/view/components/form.js"></script>
     <script defer type="text/javascript" src="/src/js/view/components/progress-bar.js"></script>
